# toiya

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-ap.md  LICENSE-mit.md  build.rs
src/ffi/: arrow.rs
src/toiya-hyperapi/: CMakeLists.txt
src/toiya-hyperapi/src/: hyper_reader.cpp  hyper_reader.hpp  hyper_writer.cpp  hyper_writer.hpp  main.cpp  reader_sample.cpp  reader_sample.hpp
src/toiya-hyperapi/src/data/: train.hyper  train_cxx.hyper
